03-Project-manifests/common/Middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefixes
  namespace: traefik
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /api/node
      - /api/golang
