03-Project-manifests/common/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-routes
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`klaus-devops-journey.com`) && PathPrefix(`/api/golang`)
      kind: Rule
      priority: 20
      middlewares:
        - name: strip-api-prefixes
      services:
        - name: api-golang
          namespace: demo-app
          port: 8000
    - match: Host(`klaus-devops-journey.com`) && PathPrefix(`/api/node`)
      kind: Rule
      priority: 20
      middlewares:
        - name: strip-api-prefixes
      services:
        - name: api-node
          namespace: demo-app
          port: 3000
    - match: Host(`klaus-devops-journey.com`)
      kind: Rule
      priority: 1
      services:
        - name: client-react-nginx
          namespace: demo-app
          port: 8080
  tls:
    secretName: app-tls
